namespace Game.Entities.Character
{
    public class AnimatorParams
    {
        public const string IS_IDLE = "IsIdle";
        public const string IS_GROUNDED = "IsGrounded";
        public const string IS_CROUCHED = "IsCrouched";
        public const string IS_LANDED = "IsLanded";

        public const string FORWARD = "Forward";
        public const string VERTICAL = "Vertical";
    }
}